hphp/hack/test/typecheck/expression_trees/nested_splicing2.php.exp
File "nested_splicing2.php", line 8, characters 23-32:
This is a reserved keyword for expression trees that cannot be used (Parsing[1002])
