hphp/hack/test/typecheck/expression_trees/nested_splicing2.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

final class Code {}

function test(): void {
  Code`__splice__(1 + __splice__(4))`;
}
